Prevent windows/Chrome vertical scrollbar
- got rid of unnecessary styling and applied scrollbar styling too

--- a/client/scss/grids/_grid_scroll.scss
+++ b/client/scss/grids/_grid_scroll.scss
@@ -5,6 +5,7 @@
     margin-left: -#{map-get($container-padding, 'small')};
     padding-left: map-get($container-padding, 'small');
     margin-right: -#{map-get($container-padding, 'small')};
+    padding-bottom: map-get($gutter-width, 'large');
   }
 }
 
